<resources>
    <string name="plamber_web_page" translatable="false">https://plamber.com.ua/</string>
    <string name="plamber_page_about" translatable="false">https://plamber.com.ua/about</string>
    <string name="plamber_page_vk" translatable="false">https://vk.com/plamber.reading</string>
    <string name="plamber_page_twitter" translatable="false">https://twitter.com/plamber_reading</string>
    <string name="plamber_page_fb_page" translatable="false">https://www.facebook.com/plamber.reading/</string>
    <string name="plamber_page_fb_group" translatable="false">https://www.facebook.com/groups/960328440785420/</string>
    <string name="app_name">Plamber</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_new">New password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="connected">Connected</string>
    <string name="user_name">User name or E-mail</string>
    <string name="user_name_singUp">User name</string>
    <string name="password_agian">Password again</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="validate_email">Please enter valid email address</string>
    <string name="validate_username_and_email">Only latin symbols, digits, length from 2 to 30 and _ . @ </string>
    <string name="validate_username">Only latin symbols, digits, length from 2 to 30 and _ </string>
    <string name="validate_password">Between 6 and 16 alphanumeric characters</string>
    <string name="validate_password_same">Passwords must be the same</string>
    <string name="press_once_to_exit">Press once again to exit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="restore_title">Restore account</string>
    <string name="restore_send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_login_page">Back to login page?</string>
    <string name="restore_account">Restore account</string>
    <string name="error_recycler">Please pull to update</string>
    <string name="tap_to_change">Tap to change avatar</string>
    <string name="old_password">Old password</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="validate_password_clone">Old and new passwords can not be the same</string>
    <string name="search_menu">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="remove_book_from_library">Remove book from library</string>
    <string name="remove_book_from_device">Remove book from device</string>
    <string name="nothing_found">Nothing found on your request</string>
    <string name="download_only">Offline mode</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="recommended">Recommended</string>
    <string name="library">Library</string>
    <string name="my_books">Readable</string>
    <string name="upload_book_activity">Upload books</string>
    <string name="upload_book_name">Book name</string>
    <string name="upload_book_author">Book author</string>
    <string name="upload_select_the_book_category">Select the book category</string>
    <string name="upload_about_book">About book</string>
    <string name="upload_select_book_language">Select book language</string>
    <string name="upload_select_book_file">Select book file</string>
    <string name="file_size">Mb</string>
    <string name="file_folder">Folder</string>
    <string name="close_picker">Exit</string>
    <string name="pdf_file_don_t_search">PDF file don`t search</string>
    <string name="show_hidden_file">Show hidden file</string>
    <string name="no_show_hidden_file">Don`t show hidden file</string>
    <string name="select_category_upload">Select category</string>
    <string name="select_language_upload">Select language</string>
    <string name="valid_book_name">Please enter book name</string>
    <string name="valid_book_author">Please enter book`s author</string>
    <string name="valid_book_category">Please select category</string>
    <string name="valid_book_file">Please select book file</string>
    <string name="valid_book_language">Please select book language</string>
    <string name="valid_book_about">Please write about this book</string>
    <string name="download_progress">Download progress:\ </string>
    <string name="upload_progress">Upload progress:\ </string>
    <string name="file_is_being_prepared">File is being prepared</string>
    <string name="upload_book_btn">Upload book</string>
    <string name="make_book_is_private">Make book is private</string>
    <string name="information_about_book">Information about book</string>
    <string name="rating_book">Rating book:\ </string>
    <string name="now_reading">Now reading:\ </string>
    <string name="language">Language:\ </string>
    <string name="genre">Genre:\ </string>
    <string name="who_added">Who added:\ </string>
    <string name="date_added">Date added:\ </string>
    <string name="description_book">Description book</string>
    <string name="download_book">Download Book</string>
    <string name="view_all_comments">All comments</string>
    <string name="this_book_has_no_comments">This book has no comments</string>
    <string name="reviews">Reviews\ </string>
    <string name="add_comment">Add comment</string>
    <string name="add_rated">Add rated</string>
    <string name="please_rated_book">Please rated book</string>
    <string name="your_rating_is">Thanks, your rating is\ </string>
    <string name="rating_must_be_greater_0">Rating must be greater than 0</string>
    <string name="thank_you_for_your_opinion">Thank you for your opinion</string>
    <string name="error_has_occurred">Sorry, error has occurred</string>
    <string name="write_comment_here">Write comment here</string>
    <string name="please_enter_comment">Please enter comment</string>
    <string name="about_book_detail">About book</string>
    <string name="description_book_detail">Description book</string>
    <string name="read_book_detail_btn">Read Book</string>
    <string name="download_book_detail_btn">Download Book</string>
    <string name="added_book_detail_btn">Added Book</string>
    <string name="no_connection_error">No connection to server enable download only mod?</string>
    <string name="connetion_error_title">Connection error</string>
    <string name="no_added_book_in_library">You have not added any books yet</string>
    <string name="no_upload_book_in_library">You have not offlineBook any books yet</string>
    <string name="no_book_in_category_message">No books int this categoryt</string>
    <string name="detail_book_added">Book added</string>
    <string name="detail_book_removed">Book removed</string>
    <string name="detail_error_added">Error added</string>
    <string name="detail_remove_error">Remove error</string>
    <string name="password_or_account_is_incorrect">Password or account is incorrect</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="send_message_support">Send message</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="support_message">Support message</string>
    <string name="the_support_message_not_empty">The message text can not be empty</string>
    <string name="now_in_offlane_mode">Now in offline mode</string>
    <string name="select_pdf_file">Select PDF file</string>
    <string name="select_image_file">Select image file</string>
    <string name="no_image_file">Image file don`t search</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="upload_not_available_in_offline_mode">Upload is not available in offline mode</string>
    <string name="search_not_access_in_offline">Search not access in offline</string>
    <string name="all_comments_title">Comments</string>
    <string name="download_book_title">Download book</string>
    <string name="download_complete_message">Download complete</string>
    <string name="download_error_message">Download error</string>
    <string name="upload_avatar_title">Upload avatar</string>
    <string name="avatar_uploaded_message">Avatar uploaded</string>
    <string name="error_update_avatar">Error updated avatr</string>
    <string name="upload_book_title">Upload book</string>
    <string name="book_uploaded_success">Book uploaded success</string>
    <string name="download_was_interrupted">Download was interrupted</string>
    <string name="enable_btn">Enable</string>
    <string name="ok_btn">OK</string>
    <string name="change_avatar_btn">Change avatar</string>
    <string name="email_already_use">Email already use</string>
    <string name="login_already_use">Login already use</string>
    <string name="current_password_is_incorrect">Current password is incorrect</string>
    <string name="password_was_change">Password was change</string>
    <string name="not_have_write_permission">Don`t have write permission</string>
    <string name="instruction_was_send_to_your_email">Instruction was send to your email</string>
    <string name="this_email_not_register">This email don`t register</string>
    <string name="setting_title">Setting</string>
    <string name="add_comment_btn">Add comment</string>
    <string name="add_rated_btn">Add rated</string>
    <string name="this_book_not_access_in_offline">This book dont`t access in offline</string>
    <string name="thanks_for_your_message">Thanks for your message</string>
    <string name="upload_was_interrupted">Upload was interrupted</string>
    <string name="profile_setting">Profile setting</string>
    <string name="account_information">Account information</string>
    <string name="information_about_current_user">Information about current user</string>
    <string name="change_user_password">Change user password</string>
    <string name="about_setting">About</string>
    <string name="email_spport">Email support</string>
    <string name="find_errors_or_have_questions">Find errors or have questions? Write to us</string>
    <string name="home_page">Home page</string>
    <string name="about_plamber_setting">About plamber</string>
    <string name="version_setting">Version</string>
    <string name="information_about_plamber">Information about plamber</string>
    <string name="not_allowed_user_name">Not allowed username</string>
    <string name="no_find_pdf_files_in_your_device">No find pdf files in your device</string>
    <string name="local_file_title">Local files</string>
    <string name="enter_page_number">Enter page number</string>
    <string name="number_of_page_in_this_book">Number of pages in this book\u0020</string>
    <string name="go_to">Go to</string>
    <string name="go_to_page_menu">Go to page</string>
    <string name="close_reader_menu">Close reader</string>
    <string name="fit_to_width">Fit to width</string>
    <string name="hide_toolbar">Hide toolbar</string>
    <string name="hide_status_bar">Hide status bar</string>
    <string name="show_status_bar">Show status bar</string>
    <string name="synchronize">Synchronize</string>
    <string name="synchronize_complete">Synchronize complete</string>
    <string name="book_remove_from_device">Book remove from device</string>
    <string name="this_book_was_saved_on_your_device">This book was saved on your device</string>
    <string name="message_upload_offline">You download the book offline, it will not be available on other devices. After connecting to the network, you can upload it to the server</string>
</resources>