<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/profile_setting">

        <Preference
            android:key="change_avatar"
            android:title="@string/account_information"
            android:summary="@string/information_about_current_user">
        </Preference>

        <Preference
            android:key="change_password"
            android:title="@string/change_password"
            android:summary="@string/change_user_password">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_setting">

        <Preference
            android:key="support"
            android:title="@string/email_spport"
            android:summary="@string/find_errors_or_have_questions">
        </Preference>

        <Preference android:title="@string/home_page"
            android:summary="Plamber.com.ua">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/plamber_web_page" />
        </Preference>

        <Preference
            android:key="about_plamber"
            android:title="@string/about_plamber_setting"
            android:summary="@string/information_about_plamber">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/plamber_page_about" />
        </Preference>

        <Preference
            android:key="version"
            android:title="@string/version_setting"
            android:summary="@string/plamber_version">
        </Preference>

    </PreferenceCategory>


</PreferenceScreen>