<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_margin"
        android:layout_margin="@dimen/logo_margin"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/logo_margin"
        android:layout_marginRight="@dimen/logo_margin">
        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/logo_margin"
        android:layout_marginRight="@dimen/logo_margin">
        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/logo_margin"
        android:layout_marginRight="@dimen/logo_margin">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingTop="@dimen/top_margin"
            android:paddingBottom="@dimen/top_margin"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingTop="@dimen/top_margin"
            android:paddingBottom="@dimen/top_margin"
            android:backgroundTint="@color/colorAccent"/>

    </LinearLayout>

    <TextView
        android:layout_margin="@dimen/forgot_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

</LinearLayout>