<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/logo_margin"
            android:layout_marginRight="@dimen/logo_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_margin"
                android:layout_marginBottom="@dimen/logo_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:gravity="center_horizontal"
                android:src="@drawable/logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_sing_up_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:textSize="20sp"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin">
                <EditText
                    android:id="@+id/et_sing_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin">
                <EditText
                    android:id="@+id/et_sing_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin">
                <EditText
                    android:id="@+id/et_sing_up_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_agian"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:padding="@dimen/top_margin"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="@dimen/top_margin"/>

            <TextView
                android:layout_marginTop="@dimen/forgot_margin"
                android:layout_marginBottom="@dimen/logo_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_a_member_login"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"/>

        </LinearLayout>



    </ScrollView>

</LinearLayout>