<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_library">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_support_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/support_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="19sp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/support_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:gravity="top"
                android:hint="@string/write_your_message_here"
                app:backgroundTint="@android:color/transparent"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/send_support_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="@dimen/top_margin"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/AppTheme.GreenButton"
                android:text="@string/send_message_support"
                android:layout_gravity="bottom"/>

        </LinearLayout>
    </ScrollView>




</LinearLayout>