<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_library"
        android:paddingRight="@dimen/margin_library"
        android:gravity="center_vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_change_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/et_change_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:textSize="19sp"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_change_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_button"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/et_change_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_new"
                        android:textSize="19sp"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_change_again_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_button"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/et_change_again_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_agian"
                        android:textSize="19sp"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:padding="@dimen/top_margin"
                    android:layout_marginTop="@dimen/top_margin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/AppTheme.GreenButton"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>



</LinearLayout>
