<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/upload_offline_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_library"
        android:paddingRight="@dimen/margin_library"
        android:gravity="center_vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/upload_book_offline_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/et_upload_offline_book_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/upload_book_name"
                        android:textSize="19sp"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_button">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/upload_book_offline_file"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/et_upload_book_offline_file"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/upload_select_book_file"
                            android:textSize="19sp"
                            android:inputType="text|textNoSuggestions"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btn_upload_select_offline_file"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_insert_drive_file_black_24dp"
                        android:layout_weight="7"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:tint="@color/colorAccent"/>
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_upload_offline_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:padding="@dimen/top_margin"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/AppTheme.GreenButton"
                    android:text="@string/upload_book_btn"/>

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/message_upload_offline"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>